--- a/.github/workflows/related-issues.yml
+++ b/.github/workflows/related-issues.yml
@@ -34,9 +34,9 @@ jobs:
     runs-on: ubuntu-latest
     needs: ingest
     outputs: 
-      comment_body: ${{ steps.1.outputs.comment_body }}
+      comment_body: ${{ steps.one.outputs.comment_body }}
     steps:
-      - id: '1'
+      - id: one
         name: Search based on issue title
         uses: brob/algolia-issue-search@7cc34a4a7d78f4c3f8c0dfca45ad234485bb4e21
         with: 
