--- a/.github/workflows/related-issues.yml
+++ b/.github/workflows/related-issues.yml
@@ -12,7 +12,7 @@ on:
 jobs:
   ingest:
     runs-on: ubuntu-latest
-    
+    needs: comment
     steps:
       - name: Add Algolia Record
         uses: chuckmeyer/add-algolia-record@v0
@@ -32,7 +32,6 @@ jobs:
         
   search:
     runs-on: ubuntu-latest
-    needs: ingest
     outputs: 
       comment_body: ${{ steps.one.outputs.comment_body }}
     steps:
