--- a/.github/workflows/related-issues.yml
+++ b/.github/workflows/related-issues.yml
@@ -29,7 +29,7 @@ jobs:
               "objectID": "${{ github.event.issue.number }}"
             }
         
-        
+     # Todo: Reconfigure search to out put list of articles   
   search:
     runs-on: ubuntu-latest
     outputs: 
@@ -43,7 +43,7 @@ jobs:
           api_key: ${{ secrets.ALGOLIA_API_KEY }}
           index_name: ${{ github.event.repository.name }}
           issue_title: ${{ github.event.issue.title }}
-
+# reconfigure comment to set up template and insert articles in template
   comment:
     runs-on: ubuntu-latest
     needs: search
@@ -51,8 +51,14 @@ jobs:
       issues: write
     
     steps: 
+      - name: Render markdown
+        id: markdown
+        uses: chuhlomin/render-template@v1.2
+        with:
+          template: .github/template.md
+          vars: |
+            mdList: ${{ needs.search.outputs.comment_body }}
       - name: Create or Update Comment
-    
         uses: peter-evans/create-or-update-comment@v1.4.5
         with:
           # GITHUB_TOKEN or a repo scoped PAT.
@@ -60,4 +66,4 @@ jobs:
           # The number of the issue or pull request in which to create a comment.
           issue-number: ${{ github.event.issue.number }}
           # The comment body.
-          body: ${{ needs.search.outputs.comment_body }}
+          body: ${{ steps.markdown.output.result }}
