Testing multi line variable

--- a/.github/workflows/related-issues.yml
+++ b/.github/workflows/related-issues.yml
@@ -58,6 +58,7 @@ jobs:
           template: .github/template.md
           vars: |
             mdList: ${{ needs.search.outputs.comment_body }}
+            testvar: hello world
       - name: Create or Update Comment
         uses: peter-evans/create-or-update-comment@v1.4.5
         with:
