--- a/.github/workflows/related-issues.yml
+++ b/.github/workflows/related-issues.yml
@@ -51,6 +51,8 @@ jobs:
       issues: write
     
     steps: 
+      - uses: actions/checkout@v2
+
       - name: Render markdown
         id: markdown
         uses: chuhlomin/render-template@v1.2
