--- a/.github/workflows/related-issues.yml
+++ b/.github/workflows/related-issues.yml
@@ -38,7 +38,7 @@ jobs:
     steps:
       - id: one
         name: Search based on issue title
-        uses: brob/algolia-issue-search@e0242b74564850c08eada22500a651d076e27b3c
+        uses: brob/algolia-issue-search@8a83309455fb3a3a5ffbcdfd8c3ea65f006ca589
         with: 
           app_id: ${{ secrets.ALGOLIA_APP_ID }}
           api_key: ${{ secrets.ALGOLIA_API_KEY }}
@@ -62,5 +62,5 @@ jobs:
           # The comment body.
           body: |
             # While you wait, here are related issues:
-            ${{ needs.search.outputs.comment_body }}
+            ${{ needs.search.outputs.issues_list }}
             just a test of post comment
