--- a/.github/workflows/related-issues.yml
+++ b/.github/workflows/related-issues.yml
@@ -17,7 +17,7 @@ jobs:
     steps:
       - id: search
         name: Search based on issue title
-        uses: brob/algolia-issue-search@0ca6bf3df88919a4bfdf1fd87b4ecd425fa3b461
+        uses: brob/algolia-issue-search@1.0
         with: 
           app_id: ${{ secrets.ALGOLIA_APP_ID }}
           api_key: ${{ secrets.ALGOLIA_API_KEY }}
